fix mobile layout issue on infobar, change text color and add key prop to projects

--- a/src/component-stylesheets/About.css
+++ b/src/component-stylesheets/About.css
@@ -7,5 +7,5 @@
 }
 
 .about p {
-    color: black;
+    color: #3f3e42;
 }
