--- a/src/component-stylesheets/App.css
+++ b/src/component-stylesheets/App.css
@@ -12,3 +12,17 @@ main {
 ul {
     padding: 0;
 }
+
+a:hover {
+    transform: scale(1.05);
+}
+
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+}
+
+.fade-enter .fade-enter-active {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+}
