--- a/src/component-stylesheets/Project.css
+++ b/src/component-stylesheets/Project.css
@@ -1,6 +1,6 @@
 .project {
     background: #f9f9f9ad;
-    color: black;
+    color: #3f3e42;
     text-align: center;
     padding: 1rem;
     margin: 1rem;
